examples/8_traq/mariadb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb

spec:
  type: ClusterIP
  selector:
    app: mariadb
  ports:
    - name: mariadb
      port: 3306
      targetPort: 3306

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb

spec:
  serviceName: mariadb
  replicas: 1

  selector:
    matchLabels:
      app: mariadb

  template:
    metadata:
      labels:
        app: mariadb
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mariadb

      containers:
        - name: mariadb
          image: mariadb:11
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: data
