examples/8_traq/traq.yaml
apiVersion: v1
kind: Service
metadata:
  name: traq

spec:
  type: ClusterIP
  selector:
    app: traq
  ports:
    - name: traq
      port: 80
      targetPort: 3000

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: traq

spec:
  serviceName: traq
  replicas: 1

  selector:
    matchLabels:
      app: traq

  template:
    metadata:
      labels:
        app: traq
    spec:
      enableServiceLinks: false
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: traq
        - name: config
          configMap:
            name: traq

      containers:
        - name: traq
          image: ghcr.io/traptitech/traq:latest
          volumeMounts:
            - mountPath: /app/storage
              name: data
            - mountPath: /app/config.yml
              name: config
              subPath: config.yml
              readOnly: true
